--- a/Wingoo/WebContent/WEB-INF/web.xml
+++ b/Wingoo/WebContent/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 	
 	<resource-ref>
 		<description>DB Connection</description>
-		<res-ref-name>HardHelp</res-ref-name>
+		<res-ref-name>Wingoo</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
